scrollbar invloed pagina fix

--- a/css/login.css
+++ b/css/login.css
@@ -29,7 +29,3 @@
 #login:hover {
   background-color: rgb(253, 170, 183);
 }
-
-#aanmaak {
-  margin: 5px;
-}
